tesseractjs with vue

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "node-tesseract-ocr": "^2.2.1",
+    "tesseract.js": "^2.1.5",
     "vue": "^2.6.14"
   },
   "devDependencies": {
@@ -19,7 +21,10 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "sass": "^1.52.2",
+    "sass-loader": "^13.0.0",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.73.0"
   },
   "eslintConfig": {
     "root": true,
